--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
-        <div class="">
+        <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects</h1>
                 <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
@@ -35,7 +35,7 @@
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 
