--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- header start -->
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="section-title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -48,6 +48,16 @@
             </div>
         </section>
         <!-- teams section end -->
+
+        <!-- Features section -->
+        <section class="features">
+
+        </section>
+        <!-- facts section -->
+        <section class="facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </section>
     </main>
     <footer>
 
