--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <h1 class="banner-title">Brand New Group of Architects</h1>
+                <h1 class="banner-title">Brand New <br>Group of Architects</h1>
                 <p class="text-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look even</p>
                 <button class="btn-primary">Explore More</button>
@@ -51,7 +51,33 @@
 
         <!-- Features section -->
         <section class="features">
-
+            <div class="feature-content">
+                <h3 class="section-title">Features you will <br>love & enjoy</h3>
+                <p class="text-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="card">
+                    <h4>Desktop & Mobile Version</h4>
+                    <p class="text-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                </div>
+                <div class="card">
+                    <h4>Drag & Drop Builder</h4>
+                    <p class="text-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                </div>
+                <div class="card">
+                    <h4>Awesome Modern Design</h4>
+                    <p class="text-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                </div>
+                <div class="card">
+                    <h4>Super Easy to Edit</h4>
+                    <p class="text-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                </div>
+            </div>
+            <div class="feature-img">
+                <img src="images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h2>10+ years</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
         </section>
         <!-- facts section -->
         <section class="facts">
