--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </section>
     </main>
     <footer>
-
+        <p class="footer-text">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 
